--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -31,3 +31,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+@keyframes blink {
+  50% {
+      opacity: 0;
+  }
+}
