--- a/src/app/clientes/deposito/whatsapp/deposito-whatsapp.component.html
+++ b/src/app/clientes/deposito/whatsapp/deposito-whatsapp.component.html
@@ -1,4 +1,7 @@
 <div class="col-12" *ngIf="whatsapp">
+    <div class="content-header">
+        <h2>{{'deposito.titulo' | translate}}</h2>
+    </div>
     <div class="row">
         <span class="alerta-min">
             Solicite deposito entrando em contato através do Whatsapp: {{whatsapp}}
