--- a/src/app/clientes/deposito/deposito.component.css
+++ b/src/app/clientes/deposito/deposito.component.css
@@ -1,7 +1,9 @@
 #default-content {
     padding: 25px 38px;
 }
-
+.banner-deposito > div.banners{
+    padding: 0 !important;
+}
 .btnClose {
     font-size: 32px;
     line-height: 22px;
