--- a/src/app/shared/layout/banners/banners.component.html
+++ b/src/app/shared/layout/banners/banners.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="banners.length > 0" class="banners" [ngClass]="pagina" [hidden]="showLoadingIndicator">
+<div  *ngIf="banners.length > 0" class="banners" [ngClass]="{'p-0':pagina === 'deposito'}" [hidden]="showLoadingIndicator">
     <ngb-carousel [showNavigationArrows]="showNavigationArrows">
         <ng-template *ngFor="let banner of banners" ngbSlide>
             <div class="picsum-img-wrapper">
