--- a/src/app/shared/layout/skeleton/skeleton.component.html
+++ b/src/app/shared/layout/skeleton/skeleton.component.html
@@ -2,3 +2,4 @@
 <app-skeleton-provider *ngIf="showSkeletonProvider"/>
 <app-skeleton-casino-filter-bar *ngIf="showSkeletonCasinoFilterBar"/>
 <app-skeleton-banner *ngIf="showSkeletonBanner"/>
+<app-skeleton-small-banner *ngIf="showSkeletonSmallBanner"/>
