--- a/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.css
+++ b/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.css
@@ -129,6 +129,64 @@ a.link-termos-politica {
     color: var(--highlight);
 }
 
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.modal-content {
+    background-color: #181818;
+    padding: 20px;
+    border-radius: 4px;
+    width: 100%;
+    max-width: 450px;
+    text-align: center;
+}
+
+.modal-title {
+    color: #ffff;
+    font-family: 'Open Sans', 'sans-serif';
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 15px;
+}
+
+.modal-body-custom {
+    color: rgba(255, 255, 255, 0.5);
+    font-family: 'Open Sans';
+    font-weight: 400;
+    font-size: 13px;
+    text-align: center;
+    padding: 20px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.modal-footer-he {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.btn-cancel {
+    background-color: transparent;
+    margin-top: 5px;
+    color: rgba(255, 255, 255, 0.5);
+    border: none
+}
+
+.btn-custom {
+    margin-top: 5px;
+}
+
+
 @media only screen and (max-width: 1024px) {
     .modal-body {
         padding: 40px 25px 15px;
