--- a/src/app/shared/layout/banners/banners.component.html
+++ b/src/app/shared/layout/banners/banners.component.html
@@ -1,4 +1,4 @@
-<app-skeleton *ngIf="showSkeleton && showLoadingIndicator" type="small-banner"/>
+<app-skeleton *ngIf="showSkeleton && showLoadingIndicator" type={{type}}/>
 
 <div  *ngIf="banners.length > 0" class="banners" [ngClass]="{'p-0':pagina === 'deposito'}" [hidden]="showLoadingIndicator">
     <ngb-carousel [showNavigationArrows]="showNavigationArrows">
