--- a/src/app/clientes/perfil/cliente-perfil.component.html
+++ b/src/app/clientes/perfil/cliente-perfil.component.html
@@ -105,7 +105,7 @@
                             </div>
                             <div class="col-md-5">
                                 <div class="form-group">
-                                    <input type="text" formControlName="logradouro" class="form-control inverted-out">
+                                    <input type="text" formControlName="logradouro" class="form-control inverted-out" placeholder="{{'geral.exLogradouro' | translate}}">
                                     <app-error-msg [control]="form.get('logradouro')"></app-error-msg>
                                 </div>
                             </div>
