--- a/src/app/shared/layout/modals/cliente-perfil-modal/cliente-perfil-modal.component.html
+++ b/src/app/shared/layout/modals/cliente-perfil-modal/cliente-perfil-modal.component.html
@@ -66,7 +66,7 @@
                     </div>
 
                     <div class="form-group input-md">
-                        <input type="text" placeholder=" " formControlName="logradouro" class="form-control inverted-out">
+                        <input type="text" placeholder="{{'geral.exLogradouro' | translate}}" formControlName="logradouro" class="form-control inverted-out">
                         <label for="nome">{{'geral.logradouro' | translate}}</label>
                         <app-error-msg [control]="form.get('logradouro')"></app-error-msg>
                     </div>
