ajuste header e page betby

--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -678,12 +678,12 @@
             </a>
         </div>
         <div class="category" *ngIf="betbyAtivo && aoVivoAtivo">
-            <a [routerLink]="['/betby?bt-path=%2Flive']" routerLinkActive="active">
+            <a [routerLink]="['/sports?bt-path=%2Flive']" routerLinkActive="active">
                 <span>{{'menu.aoVivo' | translate}}</span>
             </a>
         </div>
         <div class="category" *ngIf="betbyAtivo">
-            <a [routerLink]="['/betby']" routerLinkActive="active">
+            <a [routerLink]="['/sports']" routerLinkActive="active">
                 <span>{{'menu.esportes' | translate}}</span>
             </a>
         </div>
