feat: Atualizações no modal de cancelamento de cadastro: caso exista alguma promoção ativada, o texto mudará.

--- a/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.html
+++ b/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.html
@@ -217,17 +217,15 @@
                 </a>
             </div>
             <div class="modal-body-custom">
-                <p>Você está quase lá! Cadastre-se agora e experimente a
-                 emoção das apostas esportivas e cassino em primeira mão.</p>
+                <p>{{ descricaoParagrafo() }}</p>
             </div>
             <div class="modal-footer-he">
-                <button type="button" class="btn btn-custom btn-block btn-cadastrar" (click)="registerOpen()">Continuar com o cadastro</button>
+                <button type="button" class="btn btn-custom btn-block btn-cadastrar" (click)="registerOpen()">Continuar</button>
                 <button type="button" class="btn btn-secondary btn-cancel" (click)="cancelModal()">Sim, quero cancelar</button>
             </div>
         </div>
     </div>
 </div>
-
 
 
 
