--- a/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.css
+++ b/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.css
@@ -6,6 +6,8 @@ h3 {
 
 .modal-dialog {
     max-width: 600px;
+    display: flex;
+    justify-content: center;
   }
 
 .modal-header {
@@ -26,11 +28,14 @@ h3 {
     top: 4px;
     right: 5px;
     cursor: pointer;
+    padding-top: 3px;
+    padding-right: 5px;
 }
+
 .close-modal-ativacao i{
     margin: 10px;
     color: var(--highlight);
-    font-size: 20px;
+    font-size: 22px;
 }
 
 .modal-body {
@@ -153,8 +158,9 @@ a.link-termos-politica {
     color: #ffff;
     font-family: 'Open Sans', 'sans-serif';
     font-weight: 600;
-    font-size: 20px;
-    margin-bottom: 15px;
+    font-size: 24px;
+    margin-top: 30px;
+    margin-bottom: 5px;
 }
 
 .modal-body-custom {
@@ -163,7 +169,7 @@ a.link-termos-politica {
     font-weight: 400;
     font-size: 13px;
     text-align: center;
-    padding: 20px;
+    padding: 15px;
     width: 100%;
     box-sizing: border-box;
 }
@@ -172,18 +178,24 @@ a.link-termos-politica {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: flex-end;
     margin-top: 10px;
+    margin-bottom: 10px;
+    height: 100%;
 }
 
 .btn-cancel {
     background-color: transparent;
     margin-top: 5px;
     color: rgba(255, 255, 255, 0.5);
-    border: none
+    border: none;
+    margin-top: 20px;
+    width: 80%;
 }
 
 .btn-custom {
     margin-top: 5px;
+    width: 80%;
 }
 
 
@@ -211,5 +223,3 @@ a.link-termos-politica {
     margin-right: 5px
 }
 
-@media only screen and (max-width: 610px) {
-}
