--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,9 +2,10 @@
     <app-banners class="banner" pagina="home"/>
     <ng-container *ngFor="let widget of widgets">
         <app-cassino class="widgets" linkAll="/casino" [games]="gamesPopulares" *ngIf="widget.nome == 'Cassino'" [showLoadingIndicator]="loadingCassino"/>
+        <div id="betby" *ngIf="betby"></div>
         <app-cassino class="widgets" linkAll="/live-casino" [games]="gamesPopularesAoVivo" [title]="'geral.cassinoAoVivo' | translate" *ngIf="widget.nome == 'Cassino Ao Vivo'" [showLoadingIndicator]="loadingCassinoAoVivo"/>
-        <app-jogos-aovivo class="widgets" *ngIf="liveFootballIsActive && widget.nome == 'Jogos Ao Vivo'"/>
-        <app-jogos-destaque class="widgets" *ngIf="widget.nome == 'Jogos Destaque' && hasFeaturedMatches" (hasFeaturedMatches)="changeDisplayFeaturedMatches($event)"/>
+        <app-jogos-aovivo class="widgets" *ngIf="!betby && liveFootballIsActive && widget.nome == 'Jogos Ao Vivo'"/>
+        <app-jogos-destaque class="widgets" *ngIf="widget.nome == '!betby && Jogos Destaque' && hasFeaturedMatches" (hasFeaturedMatches)="changeDisplayFeaturedMatches($event)"/>
     </ng-container>
     <app-footer/>
 </div>
