Wip Correção de bug em banner

--- a/src/app/clientes/deposito/pix/deposito-pix.component.css
+++ b/src/app/clientes/deposito/pix/deposito-pix.component.css
@@ -369,7 +369,9 @@ label.label-tempo {
     .modal-body {
         padding-top: 50px;
     }
-
+    .content-header{
+        display: none;
+    }
     .group-buttons {
         width: 100%;
         margin-top: 50px;
@@ -383,6 +385,7 @@ label.label-tempo {
     #deposito-pix {
         background-color: var(--background);
         padding: 0;
+        padding-top: 24px;
     }
 
     #details-wrapper {
