--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -95,7 +95,12 @@
             {{'geral.tituloInformativoCookies' | translate}} <i class="fa-solid fa-cookie"></i>
         </div>
         <div class="informativo-cookies">
-            <div>{{'geral.informativoCookies' | translate}}</div>
+            <div>
+                {{'geral.informativoCookies' | translate}}
+                <a class="informativoCookiesLink" style="width: fit-content;" [routerLink]="['/informacoes/politica-privacidade']" *ngIf="hasPoliticaPrivacidade">
+                {{'geral.informativoCookiesLink' | translate}}
+                </a>
+            </div>
             <div>
                 <a class="btn btn-custom w-130" (click)="acceptCookies()">{{ 'botoes.aceitar' | translate }}</a>
             </div>
