--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -101,8 +101,8 @@
                 {{'geral.informativoCookiesLink' | translate}}
                 </a>
             </div>
-            <div>
-                <a class="btn btn-custom w-130" (click)="acceptCookies()">{{ 'botoes.aceitar' | translate }}</a>
+            <div class="btn-accept">
+                <a class="btn btn-custom w-130" (click)="acceptCookies()">{{ 'botoes.entendi' | translate }}</a>
             </div>
         </div>
     </div>
