rollback para url com params query e ajuste menu parlabay

--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -689,7 +689,7 @@
         </div>
         <ng-container *ngIf="isLoggedIn">
             <div style="cursor: pointer" class="category" *ngIf="parlaybayAtivo">
-                <a [routerLink]="['parlaybay']" routerLinkActive="active">
+                <a [routerLink]="['/parlaybay']" routerLinkActive="active">
                     <span>PARLAYBAY</span>
                 </a>
             </div>
