ajuste de tradução

--- a/src/app/clientes/promocao/promocao.component.html
+++ b/src/app/clientes/promocao/promocao.component.html
@@ -20,7 +20,7 @@
                 <a [ngClass]="tabSelected == 'bonus' ? 'active' : ''"
 					(click)="changeTab('bonus')">{{'geral.bonus' | translate}} <span class="circle">{{ quantityRolloversToNotify }}</span></a>
                 <a [ngClass]="tabSelected == 'rodada-gratis' ? 'active' : ''"
-                	(click)="changeTab('rodada-gratis')">{{'geral.rodadaGratis' | translate}} <span class="circle">{{ quantityRoundsToNotify }}</span></a>
+                	(click)="changeTab('rodada-gratis')">{{'rodada_gratis.rodadaGratis' | translate}} <span class="circle">{{ quantityRoundsToNotify }}</span></a>
             </div>
 
             <div class="content-body">
