--- a/src/app/shared/sidebar/sidebar-nav/sidebar-nav.component.html
+++ b/src/app/shared/sidebar/sidebar-nav/sidebar-nav.component.html
@@ -273,6 +273,12 @@
                     <span class="regiao-nome">{{'geral.financeiro' | translate}}</span>
                 </a>
             </li>
+            <li class="cambista-item">
+                <a [routerLink]="['/clientes/carteira']" routerLinkActive="router-link-active">
+                    <i class="fa fa-gift icone-generico"></i>
+                    <span class="regiao-nome">{{'geral.carteira' | translate}}</span>
+                </a>
+            </li>
 
             <li class="cambista-item" routerLinkActive="router-link-active">
                 <a (click)="toggleSubTransacoes()">
